Tercer commit script con error intencional

--- a/.github/validate.yml
+++ b/.github/validate.yml
@@ -17,4 +17,4 @@ jobs:
       uses: actions/checkout@v4 # Usa una acción predefinida de GitHub para clonar el repo
 
     - name: Ejecutar ShellCheck # Segundo paso: ejecutar la herramienta shellcheck
-      run: shellcheck my_script.sh # Comando que se ejecutará en la máquina virtual
+      run: shellcheck prueba-script.sh # Comando que se ejecutará en la máquina virtual
